.provarCaches/00D5f000005vwGkEAI/objects/rstk__syzipsite__c.object
<CustomObject>
    <description>syzipsite__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syzipsite_syzip__r.rstk__externalid__c &amp;&apos;_&apos; &amp; rstk__syzipsite_sysite__r.rstk__externalid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syzipsite_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Sites by Postal Codes</relationshipLabel>
        <relationshipName>syzipsites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syzipsite_priority__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Priority (lowest first)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syzipsite_sysite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inventory Sites by Postal Codes</relationshipLabel>
        <relationshipName>syzipsites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syzipsite_syzip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Zip/Postal Code</label>
        <referenceTo>rstk__syzip__c</referenceTo>
        <relationshipLabel>Inventory Sites by Postal Codes</relationshipLabel>
        <relationshipName>syzipsites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory Sites by Postal Code</label>
    <nameField>
        <label>Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Sites by Postal Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Division</fullName>
        <active>true</active>
        <description>Division is required</description>
        <errorConditionFormula>ISBLANK( rstk__syzipsite_invdiv__c ) || ( !ISNEW() &amp;&amp;  ISCHANGED(rstk__syzipsite_invdiv__c ) )</errorConditionFormula>
        <errorMessage>Division is required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Inventory_Site</fullName>
        <active>true</active>
        <description>Inventory Site  is required and not modifiable and should belong to Inventory Division.</description>
        <errorConditionFormula>ISBLANK( rstk__syzipsite_sysite__c ) || ( !ISNEW() &amp;&amp;  ISCHANGED(rstk__syzipsite_sysite__c )  ) ||  rstk__syzipsite_sysite__r.rstk__sysite_div__c != rstk__syzipsite_invdiv__c</errorConditionFormula>
        <errorMessage>Inventory Site  is required and not modifiable and should belong to Inventory Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Priority</fullName>
        <active>true</active>
        <description>Priority Cannot be less than zero</description>
        <errorConditionFormula>rstk__syzipsite_priority__c &lt; 0</errorConditionFormula>
        <errorMessage>Priority Cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>